--- a/react-lecture/1-vanilla/index.html
+++ b/react-lecture/1-vanilla/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Lecture</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link type="text/css" rel="stylesheet" href="/style.css" />
 </head>
 <body>
     <header>
@@ -23,6 +23,6 @@
             <div id="search-result-view"></div>
         </div>
     </div>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="/main.js"></script>
 </body>
 </html>
