--- a/모각코 플러스 HTML CSS 심화/1-2_Quiz.html
+++ b/모각코 플러스 HTML CSS 심화/1-2_Quiz.html
@@ -3,20 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>모각코 1일차 과제</title>
+    <style>
+        h1 {
+            color: red;
+        }
+        h2 {
+            color: green;
+        }
+        a {
+            list-style: none;
+        }
+        .intro {
+            font-size: 20px;
+            color:aqua;
+        }
+        #link_list {
+            font-size: 30px;
+            font-style: italic;
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <h1>안녕하세요</h1>
     <div>
         <img src="https://newsimg.sedaily.com/2020/07/01/1Z54UM3XR8_4.jpg">
     </div>
-    <div>
+    <div class="intro">
         카페 닉네임은 재발자 입니다.<br>
         MBTI는 INFJ 입니다.<br>
         열심히 참여하겠습니다. 파이팅!!
     </div>
     <h2>링크</h2>
     <hr>
-    <div>
+    <div id="link_list">
         <ul>
             <li>
                 <h3>
