HTML CSS 3일차 과제

--- a/모각코 플러스 HTML CSS 심화/2-3_Quiz.html
+++ b/모각코 플러스 HTML CSS 심화/2-3_Quiz.html
@@ -3,33 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>2일차 과제</title>
-
-        <style>
-            h2 {
-                color:darkorange;
-            }
-            span {
-                font-style: italic;
-                color:darkorchid;
-            }
-            a {
-                text-decoration-line: none;
-                color:green;
-            }
-            .intro {
-                color:darkturquoise;
-            }
-            .detail {
-                text-decoration-line: underline;
-            }
-            #other {
-                color:brown;
-            }
-            .other {
-                color:black;
-                font-size: 16pt;
-            }
-        </style>
+        <link rel="stylesheet" href="./static/3-3_Quiz.css"/>
     </head>
     <body>
         <div>
