--- a/모각코 플러스 HTML CSS 심화/minihome/home.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/home.html
@@ -16,18 +16,62 @@
                   TODAY <span>24</span>ㅣTOTAL 2222
                 </div>
               </div>
-              <div class="row2"></div>
+              <div class="row2">
+                <div class="row2_img">
+                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRRtfoWM1RHED_uszicWWRVTw_8ULR9xmthcgPgzmiB9hUHCEfSMVA9FlmtIbAbQKCuDWk&usqp=CAU"/>
+                </div>
+                <div class="row2_intro">
+                  어서오세요<br><br>
+                  여기는 재발자의 미니홈피 입니다 ^^<br><br>
+                  MBTI: infj<br>
+                  혈액형: AB형<br>
+                </div>
+              </div>
             </div>
             <div class="column2">
               <div class="row_etc">
                 <div class="column_etc1">
-                  추억 상ㅈr
+                  따봉 라ㅇi언
                 </div>
                 <div class="column_etc2">
                   url
                 </div>
               </div>
-              <div class="row_main"></div>
+              <div class="row_main">
+                <div class="main_news">
+                  <div class="news_title">
+                    Updated news
+                  </div>
+                  <div class="news_main">
+                    <div class="news_left">
+                      <div class="left_row1">
+                        <div class="left_row1_icon">사진첩</div>
+                        <div class="left_row1_main">오늘 내가 먹은거</div>
+                      </div>
+                      <div class="left_row2">
+                        <div class="left_row2_icon">게시판</div>
+                        <div class="left_row2_main">백신 두 번 맞으면 따봉이 두 개</div>
+                      </div>
+                    </div>
+                    <div class="news_right">
+                      <div class="right_row1">
+                        <div class="row1_diary">다이어리 <span class="day">1/18</span></div>
+                        <div class="row1_picture">사진첩 <span class="day">1/18</span></div>
+                      </div>
+                      <div class="right_row2">
+                        <div class="row2_board">게시판 <span class="day">1/18</span></div>
+                        <div class="row2_visitor">방명록 <span class="day">1/18</span></div>
+                      </div>
+                    </div>
+                </div>
+                </div>
+                <div class="main_room">
+                  <div class="room_title">
+                    Miniroom
+                  </div>
+                  <div class="room_main"></div>
+                </div>
+              </div>
             </div>
             <div class="column3"></div>
           </div>
