--- a/모각코 플러스 HTML CSS 심화/minihome/home.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/home.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>2021 MINI HOMEPAGE</title>
-    <link rel="stylesheet" href="./static/style.css" />
+    <link rel="stylesheet" href="./static/font.css" />
+    <link rel="stylesheet" href="./static/layout.css" />
+    <link rel="stylesheet" href="./static/home.css" />
   </head>
   <body>
     <div class="bookcover">
