--- a/모각코 플러스 HTML CSS 심화/minihome/home.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/home.html
@@ -28,6 +28,18 @@
                   MBTI: infj<br>
                   혈액형: AB형<br>
                 </div>
+                <div class="row2_dropdown">
+                  <div class="dropdown_title">
+                    <span>재발자</span>
+                  </div>
+                  <button class="dropdown_btn">파도타기&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;▼
+                    <div class="dropdown_content">
+                      <a href="#">깃허브로 가기</a>
+                      <a href="#">블로그로 가기</a>
+                    </div>
+                  </button>
+                  
+                </div>
               </div>
             </div>
             <div class="column2">
@@ -71,11 +83,18 @@
                   <div class="room_title">
                     Miniroom
                   </div>
-                  <div class="room_main"></div>
+                  <div class="room_main">
+                    <img src="https://cdn.notefolio.net/covers/107966_t3.jpg">
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="column3"></div>
+            <div class="column3">
+              <div class="column3_home"><a href="#">홈</a></div>
+              <div class="column3_diary"><a href="#">다이어리</a></div>
+              <div class="column3_gallery"><a href="#">사진첩</a></div>
+              <div class="column3_visitor"><a href="#">방명록</a></div>
+            </div>
           </div>
         </div>
       </div>
