HTML CSS 13일차 과제

--- a/모각코 플러스 HTML CSS 심화/minihome/gallery.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/gallery.html
@@ -92,7 +92,7 @@
               <div class="column3_home"><a href="./home.html">홈</a></div>
               <div class="column3_diary"><a href="./diary.html">다이어리</a></div>
               <div class="column3_gallery"><a href="./gallery.html">사진첩</a></div>
-              <div class="column3_visitor"><a href="#">방명록</a></div>
+              <div class="column3_visitor"><a href="./visitor.html">방명록</a></div>
             </div>
           </div>
         </div>
