--- a/모각코 플러스 HTML CSS 심화/minihome/visitor.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/visitor.html
@@ -5,7 +5,8 @@
     <title>2021 MINI HOMEPAGE</title>
     <link rel="stylesheet" href="./static/font.css" />
     <link rel="stylesheet" href="./static/layout.css" />
-    <link rel="stylesheet" href="./static/home.css" />
+    <link rel="stylesheet" href="./static/visitor.css"/>
+    <script src="https://kit.fontawesome.com/e8381f415d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="bookcover">
@@ -38,7 +39,6 @@
                       <a href="#">블로그로 가기</a>
                     </div>
                   </button>
-                  
                 </div>
               </div>
             </div>
@@ -52,41 +52,47 @@
                 </div>
               </div>
               <div class="row_main">
-                <div class="main_news">
-                  <div class="news_title">
-                    Updated news
-                  </div>
-                  <div class="news_main">
-                    <div class="news_left">
-                      <div class="left_row1">
-                        <div class="left_row1_icon">사진첩</div>
-                        <div class="left_row1_main">오늘 내가 먹은거</div>
-                      </div>
-                      <div class="left_row2">
-                        <div class="left_row2_icon">게시판</div>
-                        <div class="left_row2_main">백신 두 번 맞으면 따봉이 두 개</div>
-                      </div>
+                  <div class="main_visitor">
+                    <div class="visitor_item">
+                        <div class="visitor_title">
+                            <div class="title_write">
+                                No. 211 <span class="user">브라운</span > <i class="fas fa-home"></i> <span class="day">(2022. 01. 26 17:56)</span>
+                            </div>
+                        </div>
+                        <div class="visitor_box">
+                            <div class="visitor_img background-1">
+                                <img src="./static/images/brown.png"/>
+                            </div>
+                            <div class="visitor_write">나 요즘 춤추러 다니느라 바빠 나중에 놀자 그만 연락해 시간 나면 내가 먼저 할게 ㅋㅋ</div>
+                        </div>
                     </div>
-                    <div class="news_right">
-                      <div class="right_row1">
-                        <div class="row1_diary">다이어리 <span class="day">1/18</span></div>
-                        <div class="row1_picture">사진첩 <span class="day">1/18</span></div>
-                      </div>
-                      <div class="right_row2">
-                        <div class="row2_board">게시판 <span class="day">1/18</span></div>
-                        <div class="row2_visitor">방명록 <span class="day">1/18</span></div>
-                      </div>
+                    <div class="visitor_item">
+                        <div class="visitor_title">
+                            <div class="title_write">
+                                No. 210 <span class="user">문</span>  <i class="fas fa-home"></i> <span class="day">(2022. 01. 26 13:03)</span>
+                            </div>
+                        </div>
+                        <div class="visitor_box">
+                            <div class="visitor_img background-2">
+                                <img src="./static/images/moon.png"/>
+                            </div>
+                            <div class="visitor_write">하이 하이 치킨 먹고싶다~</div>
+                        </div>
                     </div>
-                </div>
-                </div>
-                <div class="main_room">
-                  <div class="room_title">
-                    Miniroom
+                    <div class="visitor_item">
+                        <div class="visitor_title">
+                            <div class="title_write">
+                                No. 209 <span class="user">샐리</span> <i class="fas fa-home"></i> <span class="day">(2022. 01. 26 10:25)</span>
+                            </div>
+                        </div>
+                        <div class="visitor_box">
+                            <div class="visitor_img background-3">
+                                <img src="./static/images/샐리.png"/>
+                            </div>
+                            <div class="visitor_write">요즘 힘들다 막막하네</div>
+                        </div>
+                    </div>
                   </div>
-                  <div class="room_main">
-                    <img src="https://cdn.notefolio.net/covers/107966_t3.jpg">
-                  </div>
-                </div>
               </div>
             </div>
             <div class="column3">
