--- a/모각코 플러스 HTML CSS 심화/minihome/diary.html
+++ b/모각코 플러스 HTML CSS 심화/minihome/diary.html
@@ -48,7 +48,7 @@
                   따봉 라ㅇi언
                 </div>
                 <div class="column_etc2">
-                  <a href="https://iamwotjr99.github.io/webStudy/%EB%AA%A8%EA%B0%81%EC%BD%94%20%ED%94%8C%EB%9F%AC%EC%8A%A4%20HTML%20CSS%20%EC%8B%AC%ED%99%94/minihome/home.html">https://iamwotjr99.github.io/webStudy/모각코 플러스 HTML CSS 심화/minihome/visitor.html"</a>
+                  <a href="https://iamwotjr99.github.io/webStudy/%EB%AA%A8%EA%B0%81%EC%BD%94%20%ED%94%8C%EB%9F%AC%EC%8A%A4%20HTML%20CSS%20%EC%8B%AC%ED%99%94/minihome/home.html">https://iamwotjr99.github.io/webStudy/모각코 플러스 HTML CSS 심화/minihome/home.html"</a>
                 </div>
               </div>
               <div class="row_main">
